objects/School_Name__c.object
<CustomObject>
    <fields>
        <fullName>Awards__c</fullName>
        <label>Awards</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>School Contact details</description>
        <label>Contact</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Enter School Email Address</description>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Established_On__c</fullName>
        <description>Established date</description>
        <label>Established On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Principal_Name__c</fullName>
        <label>Principal Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Address__c</fullName>
        <description>Please enter school address</description>
        <label>School Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <description>This captures school Name</description>
        <inlineHelpText>Enter School Name</inlineHelpText>
        <label>School Name</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>School_Website__c</fullName>
        <label>School Website</label>
        <type>Url</type>
    </fields>
    <label>School Name</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ES-{00}</displayFormat>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>School Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>